Version 3.5.1, 2020-01-xx

  Fixes:
  * Fix DB migration script for update from prior of 3.3. (#2582)
  * Fix the internal interface of container audit module (#2562)
  * Add missing headers to /auth request (#2599)
  

Version 3.5, 2020-12-22

  Features:
  * 4Eyes token uses multi challenge authentication (#2317)
  * Require attestation certificate when enrolling
    certificate token (#2152)

  Enhancements:
  * Tokens
    * Allow to update firebase_token of a Push Token (#2436)
    * Support WebAuthn tokens without sign_count (#2361)
    * PSKC import now verifies the MAC of the token secrets (#2312)
    * Configure length and contents of registration token via policy (#2284)
    * The questionnaire token can now ask several questions from the list (#2137)
  * Event handler:
    * Choose SMS Gateway Identifier in Tokenhandler
      when enrolling SMS token (#2506)
    * Choose SMTP Identifier in Tokenhandler
      when enrolling Email token (#2452)
    * Increase or decrease failcounter in Tokenhandler (#2402)
    * Allow to set maxfail counter in event handlers (#2541)
  * Policies:
    * Add extended conditions for tokeninfo (#1947)
  * Web UI
    * PIN can be changed with Challlenge Response when authenticating
      at the WebUI (#2474)
    * Hide some audit log columns for service desk users (#2372)
    * Allow to configure a link to a policy statement/GDPR (#2325)
    * Audit log now contains start time, end time and
      duration of a request (#2254)
    * The length of the audit columns to be truncated can be
      configured in pi.cfg (#1756)
    * Action grouping in scope authorization (#2438)
    * Redesign welcome message for community version (#2397)
    * Add usernames and serials of failed authentications
      as shortlink into dashboard (#2475)
    * Policy to add node name in the web UI (#1961)
    * Make event conditions searchable (#2148)
    * Align search layout in event conditions and policy actions (#2557)